Remove unused imports. Fix android errors